# Slint-Image-Converter

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.toml
.github/workflows/: ui-test.yml  windows_release.yml  wix_installer_msi.yml
src/: callbacks.rs  image_converter_app.rs  main.rs
src/core/: types.rs
src/processor/: alpha.rs  convert.rs  mod.rs  worker.rs
src/tests/: mod.rs  ui_tests.rs
ui/: actions_panel.slint  alpha_settings.slint  control_panel.slint  file_list.slint  file_queue.slint  format_selector.slint  main.slint
wix/: Clean-MsiRegistry.ps1  build_msi.ps1  components.wxs  folders.wxs  license.rtf  main.wxs  uninstall.wxs
wix/docs/: README.md
